syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  string token = 1;
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
}
